--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -2,13 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>This app uses your video camera to detect ghost orbs</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app requires use of your microphone in order to communicate with ghosts</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>This app uses speech recognition to communicate with ghosts</string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Mousedrawn.otf</string>
 		<string>digital-7.ttf</string>
+		<string>Raven Song.ttf</string>
 	</array>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>This app uses bluetooth for scanning peripheral devices</string>
