--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app uses your location and heading to use dowsing rods</string>
 	<key>NSCameraUsageDescription</key>
 	<string>This app uses your video camera to detect ghost orbs</string>
 	<key>NSMicrophoneUsageDescription</key>
